@@ -1,3 +1,9 @@
+2007-05-01  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclVar.c (TclPtrSetVar): fixed leak whenever newvaluePtr
+	had refCount 0 and was used for appending (but not
+	lappending). [Bug 1710710], thanks to mistachkin and kbk.
+
 2007-05-01  Kevin B. Kenny  <kennykb@acm.org>
 
 	* generic/tclIO.c (DeleteChannelTable): Made changes so that
